--- a/package.json
+++ b/package.json
@@ -2,6 +2,21 @@
   "name": "siritaimon_front",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
+  "build": {
+    "extends": null,
+    "files": [
+      "build/**/*",
+      "*.js"
+    ],
+    "directories": {
+      "output": "dist_electron"
+    },
+    "win": {
+      "target": "portable"
+    }
+  },
+  "homepage": ".",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -35,7 +50,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron:serve": "electron .",
+    "electron:build": "react-scripts build && electron-builder",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,6 +72,8 @@
     ]
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.1"
+    "@types/js-cookie": "^3.0.1",
+    "electron": "^17.0.1",
+    "electron-builder": "^22.14.13"
   }
 }
